# pyproj-template

./: README.md  cookiecutter.json
{{ cookiecutter.project_name }}/: .gitignore  .isort.cfg  .pre-commit-config.yaml  Dockerfile  LICENSE.txt  Makefile  README.md  dev-requirements.txt  linux-requirements.txt  prospector.yml  setup.cfg  tox.ini
{{ cookiecutter.project_name }}/.github/workflows/: ci.yml
{{ cookiecutter.project_name }}/scripts/: dev-container.sh
