[metadata]
name = {{ cookiecutter.project_name}}
version = attr: {{ cookiecutter.package_name }}.__version__
author = {{ cookiecutter.author }}
author_email = {{ cookiecutter.email }}

description = {{ cookiecutter.description }}
long_description = file: README.md

classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Intended Audience :: Developers

[options]
zip_safe = True
packages = find:
python_requires = >=3.9
install_requires =

[options.packages.find]
exclude =
    tests*
